--- a/conf/application.conf
+++ b/conf/application.conf
@@ -222,3 +222,6 @@ mail.smtp=mock
 
 # Import the crud module
 module.crud=${play.path}/modules/crud
+
+# Import the secure module
+module.secure=${play.path}/modules/secure
