--- a/conf/application.conf
+++ b/conf/application.conf
@@ -225,3 +225,6 @@ module.crud=${play.path}/modules/crud
 
 # Import the secure module
 module.secure=${play.path}/modules/secure
+
+# Import the cobertura module in test mode
+test.module.cobertura=${play.path}/modules/cobertura-2.4
